Simple Intent Implicit (keluar program), Mail, Phone, Browser, Contact

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,10 +91,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
+            <Button
+                android:text="\n intent implicit to contact \n(intent keluar aplikasi)\n"
+                android:id="@+id/intentImplicitContact"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
         </LinearLayout>
 
     </ScrollView>
-
-
 
 </LinearLayout>
